--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Category:</strong>
-  <%= @work.category %>
+  <%= @work.category.name %>
 </p>
 
 <%= link_to 'Edit', edit_work_path(@work) %> |
