--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= work.name %></td>
         <td><%= work.description %></td>
-        <td><%= work.category %></td>
+        <td><%= work.category.name %></td>
         <td><%= link_to 'Show', work %></td>
         <td><%= link_to 'Edit', edit_work_path(work) %></td>
         <td><%= link_to 'Destroy', work, method: :delete, data: { confirm: 'Are you sure?' } %></td>
