--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -14,6 +14,10 @@
   <strong>Category:</strong>
   <%= @work.category.name %>
 </p>
+<p>
+  <strong>Document:</strong>
+  <img src="<%= @work.document %>" >
+</p>
 
 <%= link_to 'Edit', edit_work_path(@work) %> |
 <%= link_to 'Back', works_path %>
